add swagger documentation for endpoints
